# ComputerEnhance

./: .gitignore  LICENSE  README.md
AlignedCodeTest/: CMakeLists.txt  Loops.s  LoopsLinux.s  LoopsWindows.s  main.cpp
BranchPredictionTest/: CMakeLists.txt  ConditionalNOP.s  Strategies.hpp  main.cpp
EstimateTSCFrequency/: CMakeLists.txt  EstimateTSCFrequency.hpp  main.cpp
HaversineDistanceAverage/: CMakeLists.txt  HaversineDistance.cpp  HaversineDistance.hpp  main.cpp
HaversineDistanceInputJSONGenerator/: CMakeLists.txt  GenerateJSON.hpp  PointsGenerator.hpp  main.cpp
MemoryHierarchyBandwidthTest/: CMakeLists.txt  LoopsWindows.s  main.cpp
MovPortsEstimation/: CMakeLists.txt  Loops.s  main.cpp
NopTest/: CMakeLists.txt  Loops.s  main.cpp
Profiler/: CMakeLists.txt  Profiler.cpp  Profiler.hpp  main.cpp
RATTest/: CMakeLists.txt  Loops.s  main.cpp
RepetitionTester/: CMakeLists.txt  RepetitionTester.hpp  TestingFunctions.hpp  main.cpp
SIMDBandwidthTest/: CMakeLists.txt  LoopsWindows.s  main.cpp
Sum/: CMakeLists.txt  main.cpp
